syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";
import "dnf/v1/option_types.proto";

// 社交系统消息类型
message RES_REQUEST_FRIEND_INVITE {
  int32 error = 1;
  int64 friendId = 2;
  string friendName = 3;
}

message RES_REWARD_QUEST {
  int32 error = 1;
  int32 questId = 2;
  string questName = 3;
}

message RES_SET_APPENDAGE_MANNEQUIN {
  int32 error = 1;
  int32 appendageId = 2;
  int32 mannequinId = 3;
}

message RES_SET_NAME_MANNEQUIN {
  int32 error = 1;
  string name = 2;
  int32 mannequinId = 3;
}

message RES_TSS_DATA {
  int32 error = 1;
  bytes data = 2;
  int32 timestamp = 3;
}

// 社交系统补充类型
message RES_REQUEST_FRIEND_INVITE_DETAIL {
  int32 error = 1;
  int64 friendId = 2;
  string friendName = 3;
  int32 friendLevel = 4;
  int32 friendJob = 5;
  bool online = 6;
  string status = 7;
}

message RES_REWARD_QUEST_FULL {
  int32 error = 1;
  int32 questId = 2;
  string questName = 3;
  int32 rewardId = 4;
  string rewardName = 5;
  int32 rewardCount = 6;
  bool success = 7;
  string message = 8;
}

message RES_SET_APPENDAGE_MANNEQUIN_DETAIL {
  int32 error = 1;
  int32 appendageId = 2;
  string appendageName = 3;
  int32 mannequinId = 4;
  string mannequinName = 5;
  bool success = 6;
  string message = 7;
}

message RES_SET_NAME_MANNEQUIN_FULL {
  int32 error = 1;
  string name = 2;
  int32 mannequinId = 3;
  string mannequinName = 4;
  bool success = 5;
  string message = 6;
  bool nameChanged = 7;
}

message RES_TSS_DATA_COMPLETE {
  int32 error = 1;
  bytes data = 2;
  int32 timestamp = 3;
  string dataType = 4;
  bool encrypted = 5;
  string signature = 6;
  int32 version = 7;
}
